--- a/API_Flask/templates/main.html
+++ b/API_Flask/templates/main.html
@@ -16,6 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     <li><a href="/register">S'inscrire</a></li>
+                    <li><a href="/add">Ajouter</a></li>
                     <li><a href="/profile">Profil</a></li>
                     <li><a href="/deco">Déconnexion</a></li>
                 </ul>
