BONUS implémenté : un utilisateur ne peut modifier que ses propres biens

--- a/API_Flask/templates/home.html
+++ b/API_Flask/templates/home.html
@@ -14,6 +14,7 @@
 
 <div class="row">
     {% for real_estate in all_real_estate %}
+    {% if real_estate.property == username %}
     <a href='/modify/{{real_estate.name}}'>
         <div class="field real_estate">
             <h1><strong>Nom : {{real_estate.name}} Description : {{real_estate.description}}</strong></h1>
@@ -27,6 +28,19 @@
             <h2>Type de bien : {{real_estate.type}} Ville : {{real_estate.city}} Propriétaire : {{real_estate.owner}}</h2>
 		</div>
     </a>
+    {% else %}
+    <div class="field real_estate">
+        <h1><strong>Nom : {{real_estate.name}} Description : {{real_estate.description}}</strong></h1>
+        {% for room in real_estate.rooms %}
+        <div>
+            Type : {{room.room_type}}
+            Surface : {{room.room_area}}
+            Meublé : {{room.room_furniture}}
+        </div>
+        {% endfor %}
+        <h2>Type de bien : {{real_estate.type}} Ville : {{real_estate.city}} Propriétaire : {{real_estate.owner}}</h2>
+    </div>
+    {% endif %}
 	{% endfor %}
 </div>
 
